--- a/css/style.css
+++ b/css/style.css
@@ -516,8 +516,9 @@ ol {
     font-size: 14px;
     color: #777777;
     font-weight: 500;
-    padding: 8px 20px;
+    padding: 2px 2px !important;
     text-transform: capitalize;
+    margin-right: 1rem;
 }
 
 .header__menu ul li .dropdown li a:after {
@@ -801,6 +802,27 @@ li .dropdown .active a {
 
 .consultation__form .section-title {
     margin-bottom: 35px;
+}
+
+.section-title button {
+    font-size: 14px;
+    border: 2px solid #D6A294;
+    padding: 5px 5px;
+    text-align: center;
+    color: #808080;
+    margin-bottom: 30px;
+    background: transparent;
+    font-weight: 600;
+}
+
+.section-title button:hover {
+    background: #d6a294;
+    color: white;
+}
+
+.section-title button.active {
+    background: #d6a294;
+    color: white;
 }
 
 .consultation__form form input {
