--- a/css/style.css
+++ b/css/style.css
@@ -267,6 +267,10 @@ ol {
     color: #fff;
 }
 
+.text-justify {
+    text-align: justify;
+}
+
 /* buttons */
 
 .primary-btn {
@@ -755,6 +759,27 @@ li .dropdown .active a {
     background: rgba(0, 0, 0, 0.3);
     /* Adiciona uma sobreposição para destacar o texto e o botão */
     border-radius: 20px;
+}
+
+.banner-1::before,
+.banner-2::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    background: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    -webkit-transition: all 300ms ease;
+    -o-transition: all 300ms ease;
+    transition: all 300ms ease;
+    border-radius: 20px;
+}
+
+.banner-1:hover::before,
+.banner-2:hover::before {
+    opacity: 1;
 }
 
 .banner-text {
@@ -1585,6 +1610,7 @@ li .dropdown .active a {
 
 .footer .container {
     max-width: 95% !important;
+
 }
 
 .footer__logo {
