--- a/css/style.css
+++ b/css/style.css
@@ -1723,7 +1723,10 @@ button.text-dark.active {
 
 .footer {
     background: #404040;
-    padding-top: 40px;
+    padding-top: 1rem;
+    background-repeat: repeat-x;
+    background-size: contain;
+    background-position: top center;
 }
 
 .footer__top {
