--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,11 @@ a:focus {
 
 ul,
 ol {
+    font-size: 17px;
+    font-family: "Poppins", sans-serif;
+    color: #666666;
+    font-weight: 400;
+    line-height: 25px;
     padding: 0;
     margin: 0;
 }
