--- a/css/style.css
+++ b/css/style.css
@@ -1560,7 +1560,7 @@ b {
 }
 
 .services__details__title h3 {
-    width: 5rem;
+    width: 4rem;
     display: flex;
     align-items: center;
 }
@@ -1574,12 +1574,12 @@ b {
 
 .services__details__content {
     position: absolute;
-    bottom: 3rem;
+    bottom: 1rem;
     left: 10px;
     width: fit-content;
     /* max-width: 60%; */
-    background-image: url('../img/bg0.png');
-    padding: 15px;
+    background-image: url('../img/bg4.png');
+    padding: 15px 30px;
     border-radius: 8px;
     color: white;
 }
@@ -2523,8 +2523,8 @@ b {
 }
 
 .services__details__pic {
-    margin-top: 35px;
-    margin-bottom: 35px;
+    /* margin-top: 35px; */
+    /* margin-bottom: 35px; */
 }
 
 .services__details__pic img {
