--- a/css/style.css
+++ b/css/style.css
@@ -292,14 +292,14 @@ ol {
 }
 
 @media screen and (max-width: 545px) {
-    span {
+    .float-button span {
         display: none;
     }
 
     .float-button {
         bottom: 15px;
         right: 15px;
-        width: 20px;
+        /* width: 20px; */
         border-radius: 20px 20px 5px 20px;
     }
 
@@ -1359,7 +1359,8 @@ h4.subtitle.mt-4.fw-semibold {
     list-style: none;
     padding: 0;
     margin: 0;
-    height: 200px;
+    /* height: 200px; */
+    z-index: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1550,7 +1551,7 @@ button.text-dark.active {
     border-radius: 5px;
     line-height: 2.1;
     color: white !important;
-    height: 19rem;
+    height: fit-content;
 }
 
 .services__item .services__item__text ul li a {
@@ -4304,4 +4305,242 @@ ul.days {
         font-size: 14px;
     }
 
+}
+
+body.offcanvas-active {
+    overflow: hidden;
+}
+
+.offcanvas-header {
+    display: none;
+}
+
+a.nav-link {
+    color: #000 !important;
+}
+
+/* Esconde o menu offcanvas em telas maiores (desktop) */
+.mobile-offcanvas {
+    display: none;
+}
+
+a.sub-arrow {
+    padding-left: 10px;
+    margin: 0;
+    color: #4c4c4c;
+    font-size: .875em;
+    font-weight: 600;
+}
+
+.mobile-offcanvas a.arrow {
+    padding: 7px 0;
+    margin: 0;
+    color: #d6a294;
+    font-size: .875em;
+    font-weight: 600;
+}
+
+.menucanva {
+    display: block;
+    font-size: 22px;
+    color: #222;
+    height: 35px;
+    width: 35px;
+    line-height: 35px;
+    text-align: center;
+    border: 1px solid #323232;
+    border-radius: 2px;
+    cursor: pointer;
+    position: absolute;
+    right: 15px;
+    align-items: center;
+    align-content: center;
+    top: 35px;
+    background: transparent;
+}
+
+.team_content {
+    display: flex;
+    align-items: end;
+}
+
+.displayidr {
+    display: flex;
+}
+
+.flexivel {
+    display: flex;
+}
+
+.fa-whatsapp {
+    background-color: transparent !important;
+}
+
+/* Exibe o menu offcanvas apenas em telas menores (máx. 768px) */
+@media (max-width: 768px) {
+    .offcanvas-menu {
+        display: block;
+    }
+
+    .services__details__text .d-flex {
+        flex-wrap: wrap-reverse;
+    }
+
+    .flexivel {
+        display: contents;
+    }
+
+    .services__details__content {
+        left: 0;
+        padding: 15px 10px;
+    }
+
+    .services__details__pic img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    .services__details__content img {
+        display: block !important;
+    }
+
+    .displayidr {
+        display: grid !important;
+    }
+
+    .team_content h2 {
+        font-size: 20px;
+    }
+
+    .team_head b {
+        text-align: center;
+    }
+
+    .team_head p {
+        text-align: center;
+        font-size: 16px;
+    }
+
+    .image-section#profile {
+        height: fit-content;
+        overflow: hidden;
+    }
+
+    .contact_field {
+        padding: inherit;
+        text-align: center;
+    }
+
+    .spad {
+        padding-top: inherit;
+        padding-bottom: 2rem;
+    }
+
+    .team_content {
+        align-items: center;
+    }
+
+    #icone {
+        width: 47px;
+        height: 44px;
+    }
+
+
+    /* Opcional: pode ocultar o menu principal em mobile */
+    .header__menu {
+        display: none;
+    }
+
+    .hero {
+        height: auto;
+        background-image: url(../img/hero-bg.png) !important;
+    }
+
+    .destaque {
+        height: fit-content !important;
+        padding: 2.5rem 0;
+    }
+
+    .destaque span {
+        display: block;
+    }
+
+    .about_hero .hero__text h2 {
+        font-size: 16px;
+        line-height: 2;
+        width: 78%;
+        padding-top: 38px;
+    }
+
+    .team-img {
+        width: fit-content;
+    }
+
+    .agenda {
+        display: none;
+    }
+
+    .card {
+        width: -webkit-fill-available;
+        margin-bottom: .5rem
+    }
+}
+
+.screen-overlay {
+    width: 0%;
+    height: 100%;
+    z-index: 30;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    background-color: rgba(34, 34, 34, 0.6);
+    transition: opacity .2s linear, visibility .1s, width 1s ease-in;
+}
+
+.screen-overlay.show {
+    transition: opacity .5s ease, width 0s;
+    opacity: 1;
+    width: 100%;
+    visibility: visible;
+}
+
+@media all and (max-width:992px) {
+
+    .offcanvas-header {
+        display: block;
+    }
+
+    .mobile-offcanvas ul.dropdown-menu.show {
+        border: none;
+    }
+
+    .mobile-offcanvas {
+        background-color: #fff !important;
+        visibility: hidden;
+        transform: translateX(-100%);
+        border-radius: 0;
+        display: block;
+        position: fixed;
+        top: 0;
+        padding: 50px 20px 30px 30px;
+        left: 0;
+        height: 100%;
+        z-index: 1200;
+        width: 70%;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        transition: visibility .2s ease-in-out, transform .2s ease-in-out;
+    }
+
+    .mobile-offcanvas.show {
+        visibility: visible;
+        transform: translateX(0);
+    }
+}
+
+.offcanvas-header .header__logo {
+    padding: 2px 30px 20px 0px !important;
 }
